# Proyecto-de-software

./: README.md
admin/: .gitignore  app.py  pyproject.toml
admin/src/core/: config.py  database.py  seeds.py
admin/src/core/models/Articulo/: Articulo.py  __init__.py
admin/src/core/models/Cobro/: Cobro.py  __init__.py
admin/src/core/models/Contacto/: __init__.py  contacto.py
admin/src/core/models/Documento_externo_Ecuestre/: DocumentoExternoEncuestre.py  __init__.py
admin/src/core/models/Documento_externo_JyA/: Documento_externo_JyA.py  __init__.py
admin/src/core/models/Encuestre/: Encuestre.py  __init__.py
admin/src/core/models/Encuestres_Equipo/: Encuestres_Equipo.py  __init__.py
admin/src/core/models/Equipo/: Equipo.py  __init__.py
admin/src/core/models/Legajo/: Legajo.py  __init__.py
admin/src/core/models/Pago/: Pago.py  __init__.py
admin/src/core/models/Pendiente/: Pendiente.py  __init__.py
admin/src/core/models/Permissions/: Permissions.py  __init__.py
admin/src/core/models/Role_permissions/: Role_permissions.py
admin/src/core/models/Roles/: Roles.py  __init__.py
admin/src/web/: __init__.py  storage.py
admin/src/web/api/: articulo.py  contacto.py
admin/src/web/controllers/: JyA.py  articulos.py  auth.py  cobros.py  contacto.py  ecuestre.py  pago.py  pendientes.py  reportes.py  users.py  validaciones.py
admin/src/web/handlers/: __init__.py  auth.py
admin/src/web/schemas/: articulo.py  contacto.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/static/: flash.css  layout.css  login.css
(+58 files in other folders)
